[gd_scene load_steps=10 format=3 uid="uid://vyeghb0o2qd1"]

[ext_resource type="Material" uid="uid://c5pmgln4fm1t3" path="res://Materials/Maps/Prototype/PrototypeMaterial.tres" id="1_3g31d"]
[ext_resource type="Script" uid="uid://b5oybwxakd4ua" path="res://UI/Main Menu/main_menu.gd" id="1_jri5q"]
[ext_resource type="Texture2D" uid="uid://dlhijvrlnidog" path="res://Texures/Maps/Prototype/sky_16_2k.png" id="2_v04x6"]

[sub_resource type="BoxMesh" id="BoxMesh_v04x6"]

[sub_resource type="BoxShape3D" id="BoxShape3D_jri5q"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_jri5q"]
panorama = ExtResource("2_v04x6")

[sub_resource type="Sky" id="Sky_ggkai"]
sky_material = SubResource("PanoramaSkyMaterial_jri5q")

[sub_resource type="Environment" id="Environment_mqkp3"]
background_mode = 2
sky = SubResource("Sky_ggkai")
ambient_light_source = 3
ambient_light_energy = 1.6
reflected_light_source = 2
ssr_enabled = true
ssao_enabled = true
ssao_radius = 1.73
ssao_intensity = 2.91
ssao_detail = 0.65
ssao_horizon = 0.11
ssil_enabled = true
ssil_intensity = 1.71
sdfgi_enabled = true
sdfgi_energy = 1.18
glow_enabled = true
glow_normalized = true
glow_bloom = 0.5
glow_hdr_threshold = 1.42
glow_hdr_scale = 2.05
glow_hdr_luminance_cap = 2.75
volumetric_fog_enabled = true
volumetric_fog_density = 0.0112
volumetric_fog_albedo = Color(0.7666196, 0.76661956, 0.76661956, 1)
volumetric_fog_emission_energy = 24.8
adjustment_enabled = true
adjustment_brightness = 0.72
adjustment_contrast = 1.14
adjustment_saturation = 0.86

[sub_resource type="BoxShape3D" id="BoxShape3D_v04x6"]
size = Vector3(0.32348633, 0.17626953, 0.072387695)

[node name="Main Menu" type="Node3D"]
script = ExtResource("1_jri5q")

[node name="StaticBody3D" type="StaticBody3D" parent="."]
transform = Transform3D(6.1720405, 0, 0, 0, 1, 0, 0, 0, 11.92233, 0, 0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="StaticBody3D"]
transform = Transform3D(7.1, 0, 0, 0, 0.099999964, 0, 0, 0, 5.76, 0, 0, 0)
material_override = ExtResource("1_3g31d")
mesh = SubResource("BoxMesh_v04x6")
skeleton = NodePath("../../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(7.1, 0, 0, 0, 0.099999964, 0, 0, 0, 5.76, 0, 0, 0)
shape = SubResource("BoxShape3D_jri5q")

[node name="StaticBody3D2" type="StaticBody3D" parent="."]
transform = Transform3D(0.58112276, 0, 0.28116274, 0, 41.62157, 0, 0.20793475, 0, -0.78577566, -4, 2, -5)

[node name="MeshInstance3D" type="MeshInstance3D" parent="StaticBody3D2"]
transform = Transform3D(7.1, 0, 0, 0, 0.099999964, 0, 0, 0, 5.76, 0, 0, 0)
material_override = ExtResource("1_3g31d")
mesh = SubResource("BoxMesh_v04x6")
skeleton = NodePath("../../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D2"]
transform = Transform3D(7.1, 0, 0, 0, 0.099999964, 0, 0, 0, 5.76, 0, 0, 0)
shape = SubResource("BoxShape3D_jri5q")

[node name="StaticBody3D3" type="StaticBody3D" parent="."]
transform = Transform3D(0.48442507, 0, -0.05575777, 0, 33.297256, 0, -0.039903637, 0, -0.6768931, 2, 1, -5)

[node name="MeshInstance3D" type="MeshInstance3D" parent="StaticBody3D3"]
transform = Transform3D(7.1, 0, 0, 0, 0.099999964, 0, 0, 0, 5.76, 0, 0, 0)
material_override = ExtResource("1_3g31d")
mesh = SubResource("BoxMesh_v04x6")
skeleton = NodePath("../../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D3"]
transform = Transform3D(7.1, 0, 0, 0, 0.099999964, 0, 0, 0, 5.76, 0, 0, 0)
shape = SubResource("BoxShape3D_jri5q")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_mqkp3")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="WorldEnvironment"]
transform = Transform3D(0.47679272, 0.03428252, -0.878347, 0.45757928, -0.86285657, 0.21470976, -0.75052667, -0.5042854, -0.42709053, 0, 7, 0)
shadow_enabled = true
shadow_blur = 0.58

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.9234515, -0.14585091, 0.3549153, 0, 0.92494464, 0.380102, -0.38371518, -0.35100576, 0.8541415, 0.5982852, 4.8263807, 2.005267)

[node name="PlayButton" type="StaticBody3D" parent="."]

[node name="PlayButton" type="Label3D" parent="PlayButton"]
transform = Transform3D(0.98372865, 0, 0.17966075, 0, 1, 0, -0.17966075, 0, 0.98372865, -0.5946647, 4.307518, 0)
text = "Play
"

[node name="PlayButton2" type="CollisionShape3D" parent="PlayButton"]
transform = Transform3D(0.98372865, 0, 0.17966075, 0, 1, 0, -0.17966075, 0, 0.98372865, -0.61034197, 4.2818832, 0.001808394)
shape = SubResource("BoxShape3D_v04x6")

[node name="QuitButton" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.61824775, 0)

[node name="QuitButton" type="Label3D" parent="QuitButton"]
transform = Transform3D(0.98372865, 0, 0.17966075, 0, 1, 0, -0.17966075, 0, 0.98372865, -0.5946647, 4.307518, 0)
text = "Quit
"

[node name="QuitButton2" type="CollisionShape3D" parent="QuitButton"]
transform = Transform3D(0.98372865, 0, 0.17966075, 0, 1, 0, -0.17966075, 0, 0.98372865, -0.61034197, 4.2818832, 0.001808394)
shape = SubResource("BoxShape3D_v04x6")

[connection signal="mouse_entered" from="PlayButton" to="." method="_on_play_button_mouse_entered"]
[connection signal="mouse_exited" from="PlayButton" to="." method="_on_play_button_mouse_exited"]
[connection signal="mouse_entered" from="QuitButton" to="." method="_on_quit_button_mouse_entered"]
[connection signal="mouse_exited" from="QuitButton" to="." method="_on_quit_button_mouse_exited"]
